# Labs

./: CMakeLists.txt  README.md
BankCPP/: BankAccount.cpp  BankAccount.h  CMakeLists.txt  Transaction.cpp  Transaction.h  main.cpp
BankCsharp/: Bank.cs  BankAccount.cs  Program.cs  Transaction.cs  Verification.cs
StaffAdministrationCPP/: Boss.cpp  Boss.h  CMakeLists.txt  Employee.cpp  Employee.h  Manager.cpp  Manager.h  main.cpp
StaffAdministrationCsharp/: StaffAdministrationCsharp.sln
StaffAdministrationCsharp/StaffAdministrationCsharp/: Boss.cs  Department.cs  Employee.cs  Manager.cs  Program.cs
